--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "input-otp": "^1.2.4",
     "@sentry/nextjs": "^8.4.0",
     "@vercel/analytics": "^1.2.2",
