--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -129,6 +129,7 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^3.3.3"
   }
 }
