--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-switch": "1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "input-otp": "^1.2.4",
     "@sentry/nextjs": "^8.4.0",
     "@vercel/analytics": "^1.2.2",
@@ -99,17 +100,17 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.4.0",
-    "@storybook/addon-essentials": "^8.1.11",
-    "@storybook/addon-interactions": "^8.1.11",
-    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-essentials": "^8.2.4",
+    "@storybook/addon-interactions": "^8.2.4",
+    "@storybook/addon-links": "^8.2.4",
     "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/addon-themes": "^8.1.11",
-    "@storybook/blocks": "^8.1.11",
-    "@storybook/manager-api": "^8.1.11",
-    "@storybook/nextjs": "^8.1.11",
-    "@storybook/react": "^8.1.11",
-    "@storybook/test": "^8.1.11",
-    "@storybook/theming": "^8.1.11",
+    "@storybook/addon-themes": "^8.2.4",
+    "@storybook/blocks": "^8.2.4",
+    "@storybook/manager-api": "^8.2.4",
+    "@storybook/nextjs": "^8.2.4",
+    "@storybook/react": "^8.2.4",
+    "@storybook/test": "^8.2.4",
+    "@storybook/theming": "^8.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^29.5.12",
@@ -125,11 +126,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
-    "storybook": "^8.1.11",
+    "storybook": "^8.2.4",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5",
-    "prettier": "^3.3.3"
+    "typescript": "^5"
   }
 }
