--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,13 @@
 {
-    "semi": false,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "arrowParens": "avoid",
-    "printWidth": 80,
-    "tabWidth": 4,
-    "useTabs": false
-  }
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "overrides": [
+    {
+      "files": "*.mdx",
+      "options": {
+        "semi": false
+      }
+    }
+  ]
+}
