--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -44,6 +44,7 @@
     "@sentry/nextjs": "^8.4.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "@theme-toggles/react": "^4.1.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
