--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -53,7 +53,7 @@
     "firebase": "^10.11.1",
     "gsap": "^3.12.5",
     "ldrs": "^1.0.1",
-    "next": "^14.2.3",
+    "next": "^14.2.7",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "octokit": "^3.2.1",
@@ -68,10 +68,14 @@
     "react-spinners": "^0.13.8",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
+    "ts-node": "^10.9.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
   },
   "paths": {
+    "@public/*": [
+      "./public/*"
+    ],
     "@/*": [
       "./src/*"
     ],
