--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "react-use-measure": "^2.1.1",
     "input-otp": "^1.2.4",
     "@sentry/nextjs": "^8.4.0",
     "@vercel/analytics": "^1.2.2",
@@ -70,7 +72,10 @@
     "tailwind-merge": "^2.2.1",
     "ts-node": "^10.9.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "jotai": "2.9.3",
+    "three": "0.168.0",
+    "framer-motion": "^12.0.0-alpha.0"
   },
   "paths": {
     "@public/*": [
@@ -102,6 +107,9 @@
     ],
     "@pre/*": [
       "./src/components/presets/*"
+    ],
+    "@fx/*": [
+      "./src/components/effects/*"
     ]
   },
   "devDependencies": {
