Switched to Yarn

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "latest",
-    "prettier": "latest"
+    "prettier": "latest",
+    "turbo": "latest"
   },
-  "packageManager": "pnpm@9.1.2",
+  "packageManager": "yarn@4.5.0",
   "engines": {
     "node": ">=18"
-  }
+  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
