--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -30,30 +30,31 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-switch": "1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "react-use-measure": "^2.1.1",
-    "input-otp": "^1.2.4",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@sentry/nextjs": "^8.4.0",
+    "@theme-toggles/react": "^4.1.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "@theme-toggles/react": "^4.1.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "cva": "^1.0.0-beta.1",
     "date-fns": "^3.5.0",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
+    "input-otp": "^1.2.4",
+    "jotai": "2.9.3",
     "ldrs": "^1.0.1",
     "next": "^14.2.7",
     "next-themes": "^0.3.0",
@@ -68,14 +69,13 @@
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-spinners": "^0.13.8",
+    "react-use-measure": "^2.1.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
-    "ts-node": "^10.9.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "jotai": "2.9.3",
-    "three": "0.168.0",
-    "framer-motion": "^12.0.0-alpha.0"
+    "three": "^0.168.0",
+    "ts-node": "^10.9.2",
+    "vaul": "^0.9.0"
   },
   "paths": {
     "@public/*": [
@@ -132,6 +132,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0",
     "autoprefixer": "^10.4.17",
     "chromatic": "^11.0.8",
     "concurrently": "^8.2.2",
