--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   },
   "devDependencies": {
     "prettier": "latest",
-    "turbo": "latest"
+    "turbo": "^2.1.2"
   },
   "packageManager": "yarn@4.5.0",
   "engines": {
     "node": ">=18"
   },
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ]
 }
