Add RadioGroup component and update layout metadata

--- a/apps/Web-App/package.json
+++ b/apps/Web-App/package.json
@@ -2,7 +2,6 @@
   "name": "noplus-web",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@4.5.0",
   "scripts": {
     "dev": "concurrently -k \"npm:dev:*\"",
     "dev:next": "next dev",
@@ -34,6 +33,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
@@ -51,7 +51,7 @@
     "cmdk": "^1.0.0",
     "cva": "^1.0.0-beta.1",
     "date-fns": "^3.5.0",
-    "firebase": "^10.13.1",
+    "firebase": "10.11.0",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
